--- a/pasta12/index.html
+++ b/pasta12/index.html
@@ -175,7 +175,7 @@
           <!--- BOTÃO --->
 
             <div id="cta1" class="mt-04 d-none">
-                <a id="my-btn" href="https://pay.kiwify.com.br/IJUVnXG" target="_blank" class="btn button-IWiNKI0399434-element ">
+                <a id="my-btn" href="https://pay.kiwify.com.br/8QBOZ4i" target="_blank" class="btn button-IWiNKI0399434-element ">
                 COMPRAR AGORA
                 </a>    
             </div>
@@ -542,7 +542,7 @@
                 <!--- BOTÃO --->
 
             <div id="cta1" class="mt-04 d-none">
-                <a id="my-btn" href="https://pay.kiwify.com.br/IJUVnXG" target="_blank" class="btn button-IWiNKI0399434-element ">
+                <a id="my-btn" href="https://pay.kiwify.com.br/8QBOZ4i" target="_blank" class="btn button-IWiNKI0399434-element ">
                 COMPRAR AGORA
                 </a>    
             </div>
